--- a/days_2_asignment.ipynb
+++ b/days_2_asignment.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "0c8c296e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Select unit of: 1. is for Kg and meters and 2. is for lbs and inches\n",
+      "Please enter your choice of unit (1 or 2): 1\n",
+      "Please input your weight in Kg \n",
+      "2\n",
+      "Please input your height in meters \n",
+      "1\n",
+      "Your BMI is: 2.0\n",
+      "You are underweight\n"
+     ]
+    }
+   ],
    "source": [
     "def calculate_bmi(weight, height):\n",
     "    bmi = weight / height ** 2\n",
@@ -17,46 +32,46 @@
     "def convert_inches(inches):\n",
     "     return inches / 39.3701\n",
     "\n",
-    "def calculator_screen():\n",
-    "        print(\"Select unit of: 1. is for Kg and meters and 2. is for lbs and inches\")\n",
+    "\n",
+    "print(\"Select unit of: 1. is for Kg and meters and 2. is for lbs and inches\")\n",
     "       \n",
-    "        unit = int(input(\"Please enter your choice of unit (1 or 2): \"))\n",
+    "unit = int(input(\"Please enter your choice of unit (1 or 2): \"))\n",
     "    \n",
-    "        if unit == 1:\n",
-    "            weight = float(input('Please input your weight in Kg \\n'))\n",
-    "            height = float(input(\"Please input your height in meters \\n\"))\n",
+    "if unit == 1:\n",
+    "    weight = float(input('Please input your weight in Kg \\n'))\n",
+    "    height = float(input(\"Please input your height in meters \\n\"))\n",
     "       \n",
-    "        elif unit == 2:\n",
-    "            weight = float(input('Please input your weight in Kg \\n'))\n",
-    "            height = float(input(\"Please input your height in meters \\n\"))\n",
+    "elif unit == 2:\n",
+    "    weight = float(input('Please input your weight in Kg \\n'))\n",
+    "    height = float(input(\"Please input your height in meters \\n\"))\n",
     "            \n",
-    "            weight = convert_pounds(pounds)\n",
-    "            height = convert_inches(inches)\n",
+    "    weight = convert_pounds(pounds)\n",
+    "    height = convert_inches(inches)\n",
     "    \n",
-    "        else:\n",
-    "            print(\"Your choice is invalid. Please enter 1 or 2\")\n",
-    "            return\n",
+    "else:\n",
+    "    print(\"Your choice is invalid. Please enter 1 or 2\")\n",
+    "\n",
     " \n",
-    "        bmi = calculate_bmi(weight, height)\n",
-    "        print(f\"Your BMI is: {bmi}\")\n",
+    "bmi = calculate_bmi(weight, height)\n",
+    "print(f\"Your BMI is: {bmi}\")\n",
     "       \n",
-    "        if bmi < 18.5:\n",
-    "            print(\"You are underweight\")\n",
+    "if bmi < 18.5:\n",
+    "    print(\"You are underweight\")\n",
     "       \n",
-    "        elif bmi <= 24.9:\n",
-    "            print(\"You have a normal weight\")\n",
+    "elif bmi <= 24.9:\n",
+    "    print(\"You have a normal weight\")\n",
     "       \n",
-    "        elif bmi <= 29.9:\n",
-    "            print(\"You are overweight\")\n",
+    "elif bmi <= 29.9:\n",
+    "    print(\"You are overweight\")\n",
     "      \n",
-    "        else:\n",
-    "            print(\"You are Obess\")"
+    "else:\n",
+    "    print(\"You are Obess\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8a6a67d",
+   "id": "07856c28",
    "metadata": {},
    "outputs": [],
    "source": []
